--- a/home.css
+++ b/home.css
@@ -4,7 +4,6 @@
     background-image: url('https://res.cloudinary.com/dlao6ox5q/image/upload/bo_0px_solid_rgb:000,o_26,q_80/v1620556891/istockphoto-1173579665-612x612_la9rzx.jpg');
     background-size: cover;
 }
-
 .logo {
     font-size: 24px;
     font-weight: bold;
@@ -12,7 +11,6 @@
     text-align: center;
     font-family: 'monoton';
 }
-
 .span-item {
     color: #fc3f05;
     text-decoration: line-through;
@@ -168,4 +166,16 @@ h1 {
     border-style: solid;
     border-width: 1px;
     border-color: #5a7184;
+}
+.fa-shopping-cart{
+    align-self: center;
+    size: 100px;
+    color: #e0dee3;
+    margin-top: 12px;
+}
+.fa-home{
+    align-self: center;
+    size: 100px;
+    color: #e0dee3;
+    margin-top: 12px;
 }
