--- a/women.css
+++ b/women.css
@@ -85,6 +85,59 @@ h1 {
     align-self: 20vw;
     margin-top: 12px;
 }
+.bg-container {
+    background-color: #19232d;
+}
+
+.logo {
+    height: 60px;
+    width: 80px;
+}
+
+.icons {
+    color: #5a7184;
+    font-size: 20px;
+}
+
+.icon-container {
+    background-color: #959ead;
+    text-align: center;
+    padding-top: 8px;
+    padding-left: 2px;
+    height: 40px;
+    width: 40px;
+    border-radius: 100px;
+}
+
+p {
+    color: #5a7184;
+    font-size: 14px;
+    font-weight: bold;
+}
+
+h1 {
+    font-size: 16px;
+    font-weight: bold;
+    color: #959aed;
+}
+
+.horizontal-line {
+    border-style: solid;
+    border-width: 1px;
+    border-color: #5a7184;
+}
+.logo {
+    font-size: 24px;
+    font-weight: bold;
+    color: #f7f707 !important;
+    text-align: center;
+    font-family: 'monoton';
+}
+.fa-shopping-cart{
+    color: azure;
+    align-self: 20vw;
+    margin-top: 12px;
+}
 .nav-bg {
     background-image: linear-gradient(to left, #b5a604, black);
 }
